[package]
name = "tbgm-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
serde_json = "1.0.82"
serde = {version = "1.0.138", features = ["derive"] }
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
anyhow = "1.0.58"
reqwest = "0.11.11"
num-format = "0.4.0"
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
wynn-api-structs = { path = "../wynn-api-structs" }
chrono = "0.4.19"
once_cell = "1.13.0"
log = "0.4.17"
lazy_static = "1.4.0"
openssl = { version = "0.10", features = ["vendored"]}
[dev-dependencies]